# iai_student_robot

./: CMakeLists.txt  Makefile  README.md  package.xml
launch/: rviz_launch_agent.launch  rviz_launch_agent_base.launch  rviz_launch_agent_gripper.launch  rviz_launch_agent_gripper_hand.launch
meshes/dae/: Table1.dae  Table2.dae  floor.stl
owl/: iai_student_map.owl  iai_student_robot.owl
rviz/: urdf.rviz  urdfmap.rviz
triple/: triples.json
urdf/: iai_student_map.urdf  iai_student_robot.urdf  iai_student_robot.xacro  iai_student_robot_base.xacro  iai_student_robot_gripper.xacro  iai_student_robot_hand.xacro
