<?xml version="1.0"?>
<package format="2">
    <name>iai_student_robot</name>
    <version>0.0.0</version>
    <description>The iai_student_robot package</description>

    <maintainer email="avyas@uni-bremen.de">Abhijit Vyas</maintainer>
    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>


    <export>
    </export>
</package>
